2008-11-17  Eric B. Weddington  <eric.weddington@atmel.com>

	PR 7022
	* elf32-avr.c (bfd_elf_avr_final_write_processing):
	Add missing break statements.

2008-10-28  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.19.0
	* Makefile.am (RELEASE): Unset.
	* configure, Makefile.in: Regenerated.

2008-10-16  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.19
	* Makefile.am (RELEASE): Set.
	* configure, Makefile.in: Regenerated.

2008-10-09  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.18.93
	* configure: Regenerated.

2008-10-09  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_get_synthetic_symtab): Don't attempt to
	read plt relocs if no dynamic syms.

2008-10-08  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (assign_file_positions_for_load_sections): When checking
	a segment for contents, don't assume that a non-TLS nobits section
	must only be followed by nobits sections.

2008-10-02  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.18.92
	* configure: Regenerated.

2008-09-30  Alan Modra  <amodra@bigpond.net.au>

	PR 6789
	* elf.c (assign_file_positions_for_load_sections): Call
	_bfd_elf_map_sections_to_segments, not elf_modify_segment_map.
	(get_program_header_size): Protect against NULL info.
	(_bfd_elf_map_sections_to_segments): Likewise.
	* elf32-spu.c (spu_elf_additional_program_headers): Likewise.

2008-09-29  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.

2008-09-19  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_finish_dynamic_sections): Handle vxworks
	_GLOBAL_OFFSET_TABLE_ in .got.plt section.  Add BFD_ASSERTs.

2008-09-17  H.J. Lu  <hongjiu.lu@intel.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	PR ld/3191
	* dwarf2.c (struct adjusted_section): Renamed from struct
	loadable_section.
	(struct dwarf2_debug): Adjust for renaming.  Add version field.